--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,14 +10,20 @@
         <script>
             var usersArray = [];
             for (var i=0; i <6 ; i++){
-                usersArray.push(User("email"+i,"name"+i,"organization"+i,i,i,i))
+                var u = User("email"+i,"name"+i,"organization"+i,i,i,i);
+                usersArray.push(u)
+                $.post("/users/registerUser", { data : JSON.stringify(u) },
+                 function(temp) { 
+                     console.log("response (register users): "+temp)
+                });
             }
             console.log('users to register',usersArray)
             
-            $.post("/users/registerUser", { data : JSON.stringify(usersArray) },
+            /*$.post("/users/registerUser", { data : JSON.stringify(usersArray) },
                  function(temp) { 
                      console.log("response (register users): "+temp)
-             });
+            });*/
+            
              $.post("/users/getUser", { data : "email0" },
                 function(temp) {
                      console.log("response (post): ", JSON.parse(temp) )
