--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,11 @@
     </head>
     <body >
         <h1> <%=title %> </h1>
-        <section> <%=info %> </section>
+        <ul>
+            <% for(var i=0; i<info.length; i++) {%>
+               <li style="list-style-type: none;"><%= info[i] %></li><br>
+            <% } %>
+        </ul>
         <script>
             var usersArray = [];
             for (var i=0; i <6 ; i++){
