--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,13 +9,13 @@
         <h1> <%=title %> </h1>
        
         <script>
-            var usersArray = [];
-            for (var i=0; i <6 ; i++){
-                //var u = User("email"+i,"name"+i,"organization"+i,i,i,i);
-                var u = {"email":"email"+i , "organization":"shenkar"}
-                usersArray.push(u)
+            // var usersArray = [];
+            // for (var i=0; i <6 ; i++){
+            //     //var u = User("email"+i,"name"+i,"organization"+i,i,i,i);
+            //     var u = {"email":"email"+i , "organization":"shenkar"}
+            //     usersArray.push(u)
                 
-            }
+            // }
             console.log('shenkar lecturus')
             //console.log('users to register',usersArray)
             
