--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,45 +9,11 @@
     <body >
         <h1> <%=title %> </h1>
        
+        <ul>
+            <li> <a href="/users"> press here for users api </a> </li>
+        </ul>
         <script>
-            // var usersArray = [];
-            // for (var i=0; i <6 ; i++){
-            //     //var u = User("email"+i,"name"+i,"organization"+i,i,i,i);
-            //     var u = {"email":"email"+i , "organization":"shenkar"}
-            //     usersArray.push(u)
-                
-            // }
             console.log('shenkar lecturus')
-            //console.log('users to register',usersArray)
-            
-            //var user =  {"email":"avishay"}
-            // $.ajax({
-            //     url : "/users/getUser",
-            //     type : 'post',
-            //     dataType : 'jsonp',
-            //     jsonpCallback : 'lecturusCallback',
-            //     contentType : "application/javascript;charset=utf-8",
-            //     data: {data:"email3"},
-            //     success : function(data) {
-            //         console.log("data", data);
-            //     },
-            //     error :  function(objRequest, errortype) {
-            //             console.log('error',errortype)
-            //     }
-            // });
-            // $.post("/users/registerUser", { data : JSON.stringify (user) },
-            //      function(temp) { 
-            //          console.log("registerUsers: "+(temp))
-            // });
-             // $.post("/users/getUser", { data : "email3" },
-             //    function(temp) {
-             //         console.log("getUser: ", (temp) )
-             // });
-             // $.post("/users/updateUser", { data : JSON.stringify(user) },
-             //    function(temp) {
-             //         console.log("updateUser: ", (temp) )
-             // });
-
         </script>
     </body>
 </html>
