--- a/views/session.ejs
+++ b/views/session.ejs
@@ -36,7 +36,7 @@
 			$.ajax({<br>
                 url : "http://lecturus.herokuapp.com/session/uploadImage",<br>
                 type : 'post',<br>
-                data: {data:'thefile',sessionId:''}, //you can use js through js <br>
+                data: {data:'thefile',sessionId:''}, //you can use form through js <br>
                 cache: false,<br>
                 contentType: false,<br>
                 processData: false,<br>
@@ -61,7 +61,7 @@
 			$.ajax({<br>
                 url : "http://lecturus.herokuapp.com/session/uploadAudio",<br>
                 type : 'post',<br>
-                data: {data:'thefile',sessionId:''}, //you can use js through js<br>
+                data: {data:'thefile',sessionId:''}, //you can use form through js<br>
                 cache: false,<br>
                 contentType: false,<br>
                 processData: false,<br>
