upload image audio and tags

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -134,7 +134,7 @@
             <li class="notReady"> 
                 <h3> /session/uploadTag -- precondition </h3>
                 <p> 
-                   json data with sessionId, tags[json data with timestamp{text, email}]
+                   json data with sessionId, tags[json data {timestamp ,text, email}]
                 </p>
                 <p>
                     json data with status 1/0
