fixed update session and get video by id

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,10 +122,10 @@
 				   	status		1		
                 </p>
             </li>
-            <li class="notReady"> 
+            <li> 
                 <h3> /session/updateSession -- precondition </h3>
                 <p> 
-                   json data with sessionId and any other data
+                   json data with session data called data data:{all session data}
                 </p>
                 <p>
                     json data with status 1/0
@@ -149,7 +149,7 @@
                     json data with status 1/0
                 </p>
             </li>
-            <li class="notReady"> 
+            <li> 
                 <h3> /session/uploadTag -- precondition </h3>
                 <p> 
                    json data with sessionId, tags[json data {timestamp ,text, email}]
